<resources>
    <string name="app_name">islamic_dua_apk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dua_of_acceptance">Dua of Acceptance</string>
    <string name="dua_of_goodness">Dua of Goodness</string>
    <string name="dua_of_sadness">Dua of Sadness</string>
    <string name="dua_of_guidance">Dua of Guidance</string>
    <string name="dua_of_forgiveness">Dua of Forgiveness</string>
</resources>